<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_text_view">...Questions..</string>

    <string name="button_true">TRUE</string>
    <string name="button_false">FALSE</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>


    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="error_outOfIndex">There is not any question  previous, this is the first question!</string>


    <!-- QUESTIONS  -->

    <string name="question_oceans">The Pacific Ocean is larger tha the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>



</resources>
