<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text_view"
        android:textSize="17dp"
        android:padding="24dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_true"/>
        <Button
            android:id="@+id/button_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_false"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_height="wrap_content">


    <!-- <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/baseline_keyboard_arrow_left_black_24"
        />  -->
    <Button
        android:id="@+id/prev_button"
        android:drawableStart="@drawable/baseline_keyboard_arrow_left_black_18"        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#4267b2"
        android:text="@string/prev_button"
        android:textColor="#fff" />
    <Button
        android:id="@+id/next_button"
        android:drawableEnd="@drawable/baseline_keyboard_arrow_right_black_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#4267b2"
        android:text="@string/next_button"
        android:textColor="#fff" />

</LinearLayout>

</LinearLayout>